# FileProcessor

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  docker-compose.yml  pyproject.toml  sample.env  sample.env.spark
app/: Dockerfile  app.py  models.py  paths_df.py  pyproject.toml  requirements.txt
diagrams/: sequence_diagram.puml  sequence_diagram_for_txt.puml
pyspark_processor/: Dockerfile  file.py  models.py  pyspark_processor.py  requirements.txt
