[tool.poetry]
name = "file-processor"
version = "0.1.0"
description = "Python+Pyspark+Postgress application to store file metadata"
authors = ["Anna <apeszek@gmail.com>"]
readme = "README.md"
packages = [{include = "file_processor"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
flask = "^2.3.3"
psycopg2-binary = "^2.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
